Add final summary

--- a/solution-tizycki.ipynb
+++ b/solution-tizycki.ipynb
@@ -4756,17 +4756,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Class 0\n",
+    "- The lowest educated users\n",
+    "- Mostly smaller cities\n",
+    "- The highest tablet usage\n",
+    "- Mid-age users\n",
+    "- Average financial situation\n",
+    "\n",
+    "#### Class 1\n",
+    "- High difference in gender - over 80% of users are women\n",
+    "- The highest professional status\n",
+    "- Non tablet users\n",
+    "- The highest mobile usage (device type)\n",
+    "- The highest fraction of the youngest users\n",
+    "- Average financial situation\n",
+    "- Quite rare browser updates\n",
+    "\n",
+    "#### Class 2\n",
+    "- Mostly average and bigger cities - the most evenly distributed\n",
+    "- Mid professional class\n",
+    "- Average financial situation\n",
+    "\n",
+    "#### Class 3\n",
+    "- Mid class (education)\n",
+    "- Low/Mid class in terms of professional status\n",
+    "- Mostly villages and medium size cities\n",
+    "- Mostly using standard Browser - Microsoft Edge/IE\n",
+    "- The highest Desktop and the smallest Mobile usage\n",
+    "- The oldest group of users\n",
+    "- Very good financial situation (the highest)\n",
+    "- Very often browser updates\n",
+    "\n",
+    "#### Class 4\n",
+    "- The highest educated users\n",
+    "- Mostly bigger cities\n",
+    "- Non table users\n",
+    "- The lowest median age of users\n",
+    "- Very high median and range of financial situation - high variance"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 9. Conclusions and summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook covers whole process of data analysis, preprocessing and modeling. At first we investigated that data and made few assumptions to further processing. Due to lack of all information - source, dictionary for all categories and information about process of gathering data some best-practice assumptions were taken. \n",
+    "\n",
+    "Refering to the first question of this task which is - if is there any connection between users' demographic/device data and psychological profiles we can surely say that it is, but not really strong. Psychological profiles has very high density and it's hard to find and prove very significant dependencies among those data. But it doesn't mean that it not exist - we have proved by two approaches that connection exist. The first approach with latent space predicting was a worse approach because of lack of dense clusters in psychological profile. Therefore it was really hard to fit into that data without overfitting. The second approach was more general - instead of predicting psychological profile for each user we clustered them according to demographic data and then looked for differences in psychological profiles among those groups. This approach had led to better results.\n",
+    "\n",
+    "The next step into this notebook was to cluster our psychological profiles into homogenous groups and describe them using the demographic and device data. In section 8.5.2 we present the charts and brief summary of those results. Based on 5 classes we found some interesting characteristics in provided data. All of those information can be used in variety aspects to improve any data-driven decision making system."
    ]
   },
   {
